--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Redirecting to github.com/write</title>
     <meta http-equiv="refresh" content="0; URL=https://github.com/write">
     <link href="https://github.com/write" rel="me">
-    <link href="https://piaille.fr/@starmina" rel="me">
+    <link href="https://piaille.fr/@Starmina" rel="me">
   </head>
   <body style="margin: 0; padding: 0">
     <a
